# wad3ex

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
include/: Image.h
src/: Image.cpp  main.cpp
